Dark mode Fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,15 +62,15 @@ main {
 }
 
 .font-primary {
-    @apply sm:text-3xl text-2xl font-medium mb-4 text-gray-900 font-['Cormorant']
+    @apply sm:text-3xl text-2xl font-medium mb-4 text-gray-900 font-['Cormorant'] dark:text-white;
 }
 
 .font-secundary {
-    @apply sm:text-lg mb-2 font-['Wittgenstein']
+    @apply sm:text-lg mb-2 font-['Wittgenstein'] dark:text-white;
 }
 
 .label-style {
-    @apply leading-7 text-sm text-gray-950
+    @apply leading-7 text-sm text-gray-950 dark:text-white
 }
 
 .card-style {
